# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/flutter/build/flutter_app.gni")
import("//build/package.gni")

flutter_app("infinite_scroller_app") {
  main_dart = "lib/main.dart"
  output_name = "infinite_scroller"

  manifest = "pubspec.yaml"

  deps = [
    "//third_party/dart-pkg/git/flutter/packages/flutter",
  ]
}

package("infinite_scroller") {
  app = true
  system_image = true

  deps = [
    ":infinite_scroller_app",
  ]

  binaries = [ {
        name = "infinite_scroller"
      } ]
}
