# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/flutter_runner/flutter_app.gni")

flutter_app("infinite_scroller") {
  deprecated_bare_package_url = "//build"

  main_dart = "lib/main.dart"

  meta = [
    {
      path = rebase_path("meta/infinite_scroller.cmx")
      dest = "infinite_scroller.cmx"
    },
  ]

  sources = []
  deps = [
    "//third_party/dart-pkg/git/flutter/packages/flutter",
  ]
}
