# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/flutter_runner/flutter_app.gni")

flutter_app("latin-ime") {
  main_dart = "main.dart"

  manifest = "pubspec.yaml"

  source_dir = "."

  deps = [
    "//garnet/public/lib/app/fidl:fidl",
    "//garnet/public/lib/ui/presentation/fidl:fidl",
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//topaz/public/lib/app/dart",
    "//topaz/public/dart/fidl",
    "//topaz/public/lib/ui/flutter",
    "//topaz/shell/keyboard",
  ]
}
