# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/flutter_runner/flutter_app.gni")

flutter_app("latin-ime") {
  deprecated_bare_package_url = "//build"

  main_dart = "main.dart"

  manifest = "pubspec.yaml"

  meta = [
    {
      path = rebase_path("meta/latin-ime.cmx")
      dest = "latin-ime.cmx"
    },
  ]

  source_dir = "."
  sources = []

  deps = [
    "//garnet/public/fidl/fuchsia.sys",
    "//garnet/public/fidl/fuchsia.ui.policy",
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//topaz/public/dart/fidl",
    "//topaz/public/lib/app/dart",
    "//topaz/public/lib/ui/flutter",
    "//topaz/shell/keyboard",
  ]
}
