# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/flutter_runner/flutter_app.gni")
import("//build/package.gni")

flutter_app("link_viewer_app") {
  main_dart = "lib/main.dart"
  output_name = "link_viewer"

  source_dir = "lib"

  deps = [
    "//peridot/public/lib/ledger/fidl:fidl_dart",
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//topaz/public/dart/logging:lib.logging",
    "//topaz/public/dart/widgets:lib.widgets",
    "//topaz/public/lib/app/dart",
  ]
}

package("link_viewer") {
  app = true
  system_image = true

  deps = [
    ":link_viewer_app",
  ]

  binaries = [ {
        name = "link_viewer"
      } ]
}
