# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/flutter_runner/flutter_app.gni")

flutter_app("link_viewer") {
  main_dart = "lib/main.dart"

  deps = [
    "//peridot/public/lib/ledger/fidl",
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//topaz/public/dart/logging:lib.logging",
    "//topaz/public/dart/widgets:lib.widgets",
    "//topaz/public/lib/app/dart",
  ]
}
