# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("music") {
  deps = [
    "//topaz/app/music/agents",
    "//topaz/app/music/modules",
    "//topaz/app/music/services",
  ]
}

group("test") {
  testonly = true

  deps = [
    "//topaz/app/music/packages/concert_models:test",
    "//topaz/app/music/packages/last_fm_models:test",
    "//topaz/app/music/packages/music_models:test",
    "//topaz/app/music/packages/music_widgets:test",
  ]
}
