# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/flutter/build/flutter_app.gni")
import("//build/package.gni")

flutter_app("perspective_app") {
  main_dart = "lib/main.dart"
  output_name = "perspective"
  package_name = "perspective"

  manifest = "pubspec.yaml"

  deps = [
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//topaz/public/dart/widgets:lib.widgets",
    "//topaz/public/lib/app/dart",
    "//topaz/public/lib/media/flutter",
  ]
}

package("perspective") {
  app = true
  system_image = true

  deps = [
    ":perspective_app",
  ]

  binaries = [ {
        name = "perspective"
      } ]
}
