# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/flutter_runner/flutter_app.gni")

flutter_app("perspective") {
  main_dart = "lib/main.dart"
  package_name = "perspective"

  manifest = "pubspec.yaml"

  meta = [
    {
      path = rebase_path("meta/perspective.cmx")
      dest = "perspective.cmx"
    },
  ]

  sources = []

  deps = [
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//topaz/public/dart/widgets:lib.widgets",
    "//topaz/public/lib/app/dart",
    "//topaz/public/lib/mediaplayer/flutter",
  ]
}
