# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

executable("bin") {
  output_name = "term"

  sources = [
    "command.cc",
    "command.h",
    "history.cc",
    "history.h",
    "key_util.cc",
    "key_util.h",
    "ledger_helpers.cc",
    "ledger_helpers.h",
    "main.cc",
    "term_model.cc",
    "term_model.h",
    "term_params.cc",
    "term_params.h",
    "term_view.cc",
    "term_view.h",
    "shell_controller.cc",
    "shell_controller.h",
  ]

  deps = [
    "//garnet/public/lib/app/cpp",
    "//garnet/public/lib/fidl/cpp/bindings",
    "//garnet/public/lib/fonts/fidl",
    "//garnet/public/lib/fsl",
    "//garnet/public/lib/fxl",
    "//garnet/public/lib/ui/geometry/fidl",
    "//garnet/public/lib/ui/input/cpp",
    "//garnet/public/lib/ui/input/fidl",
    "//garnet/public/lib/ui/scenic:client",
    "//garnet/public/lib/ui/scenic/fidl",
    "//garnet/public/lib/ui/view_framework:view_provider",
    "//garnet/public/lib/ui/views/fidl",
    "//peridot/public/lib/component/fidl",
    "//peridot/public/lib/ledger/fidl",
    "//peridot/public/lib/lifecycle/fidl",
    "//peridot/public/lib/module/fidl",
    "//peridot/public/lib/story/fidl",
    "//third_party/libteken",
    "//third_party/skia",
    "//topaz/examples/ui/lib:skia_fonts",
    "//topaz/examples/ui/lib:skia_view",
    "//zircon/public/lib/async-cpp",
    "//zircon/public/lib/async-default",
    "//zircon/public/lib/hid",
    "//zircon/public/lib/launchpad",
    "//zircon/public/lib/trace-provider",
  ]
}

package("term") {
  deps = [
    ":bin",
  ]

  binary = "term"

  meta = [ {
        path = rebase_path("meta/sandbox")
        dest = "sandbox"
      } ]
}
