# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//packages/package.gni")

package("todo") {
  app = true
  system_image = true

  deps = [
    "agents/content_provider:todo_content_provider",
    "modules/story:todo_story",
    "services",
  ]

  binaries = [
    {
      name = "gen/topaz/app/todo/modules/story/todo_story.flx"
      dest = "todo_story"
    },
    {
      name = "todo_content_provider"
    },
  ]
}
