# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

package("todo") {
  app = true
  system_image = true

  deps = [
    "modules/story:todo_story",
    "services",
  ]

  binaries = [
    {
      name = "gen/topaz/app/todo/modules/story/todo_story.flx"
      dest = "todo_story"
    },
  ]
}
