# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//packages/package.gni")

package("video") {
  app = true

  deps = [
    "//apps/modules/video/modules/video",
  ]

  binaries = [ {
        source = "gen/apps/modules/video/modules/video/video.flx"
        name = "video"
      } ]
  resources = [ {
        path = rebase_path("modules/video/assets/video.mp4")
        dest = "modules/video.mp4"
      } ]
}
