# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")
import("//peridot/build/module_repository/manifest_package.gni")

package("video") {
  app = true
  system_image = true

  deps = [
    "//topaz/app/video/modules/video",
  ]

  binaries = [ {
        source = "gen/topaz/app/video/modules/video/video.flx"
        name = "video"
      } ]
}

# Remember to also add this package to //topaz/packages/video
module_manifest_package("video_manifest") {
  sources = [
    "modules/video/manifest.json",
  ]
}