# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//peridot/build/module_repository/manifest_package.gni")

# Remember to also add this package to //topaz/packages/video
module_manifest_package("video_manifest") {
  sources = [
    "modules/video/manifest.json",
  ]
}