# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("xi") {
  deps = [
    # NOTE: comment out the `//topaz/app/xi/modules` line below to build only the
    # services before manually compiling xi-core.
    "//topaz/app/xi/modules",
    "//topaz/app/xi/xi_flutter",
  ]
}
