# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("xi") {
  deps = [
    # NOTE: comment out the `//topaz/app/xi/modules` line below to build only the
    # services before manually compiling xi-core.
    "//topaz/app/xi/modules",
    "//topaz/app/xi/xi_flutter",
  ]
}

# Top-level group for xi dart tests. To build tests, this must be
# included in the dart_unittests group in //topaz/BUILD.gn.
# Additionally, each referenced `dart_test` target must be listed in
# //topaz/packages/tests/dart_unittests
group("dart_unittests") {
  testonly = true
  deps = [
    "modules/xi_app:xi_app_tests",
  ]
}
