# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//packages/package.gni")

package("bluetooth_examples") {
  app = true

  deps = [
    "ble_scanner",
    "settings",
  ]

  binaries = [
    {
        source = "gen/topaz/examples/bluetooth/ble_scanner/ble_scanner.flx"
        name = "bluetooth_le_scanner"
    },
    {
        source = "gen/topaz/examples/bluetooth/settings/settings.flx"
        name = "bluetooth_settings_example"
    }
  ]
}
