# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

package("bluetooth_examples") {
  app = true
  system_image = true

  deps = [
    "ble_rect",
    "ble_scanner",
    "eddystone_advertiser",
  ]

  binaries = [
    {
      source = "gen/topaz/examples/bluetooth/ble_scanner/ble_scanner.flx"
      name = "ble_scanner"
    },
    {
      source = "gen/topaz/examples/bluetooth/ble_rect/ble_rect.flx"
      name = "ble_rect"
    },
    {
      source = "gen/topaz/examples/bluetooth/eddystone_advertiser/eddystone_advertiser.flx"
      name = "eddystone_advertiser"
    },
  ]
}
