# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/dart_runner/dart_app.gni")

dart_app("eddystone_agent") {
  main_dart = "main.dart"

  source_dir = "."

  deps = [
    "//garnet/public/lib/bluetooth/fidl:fidl",
    "//peridot/public/lib:fidl",
    "//peridot/public/lib:fidl",
    "//topaz/public/dart/logging:lib.logging",
    "//topaz/public/dart/widgets:lib.widgets",
    "//topaz/public/lib/app/dart",
    "//topaz/public/lib/decomposition/dart",
    "//topaz/public/dart/fidl",
    "//topaz/public/lib/proposal/dart",
    "//topaz/runtime/web_runner/lib/dart:web_view",
  ]
}
