# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/dart_runner/dart_app.gni")

dart_app("eddystone_agent") {
  main_dart = "main.dart"

  source_dir = "."

  sources = []
  deps = [
    "$garnet_sdk_fidl/fuchsia.bluetooth",
    "$garnet_sdk_fidl/fuchsia.bluetooth.le",
    "$peridot_sdk_fidl/fuchsia.modular",
    "//topaz/public/dart/fidl",
    "//topaz/public/dart/widgets:lib.widgets",
    "//topaz/public/lib/app/dart",
    "//topaz/public/lib/decomposition/dart",
    "//topaz/public/lib/module_resolver/dart",
    "//topaz/public/lib/proposal/dart",
  ]
}
