# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/flutter_runner/flutter_app.gni")

flutter_app("example_manual_relationships") {
  package_name = "example_manual_relationships"
  main_dart = "lib/main.dart"

  meta = [
    {
      path = rebase_path("meta/example_manual_relationships.cmx")
      dest = "example_manual_relationships.cmx"
    },
  ]

  sources = [
    "grouping.dart",
    "launch_copresent_button.dart",
    "start_module_button.dart",
  ]

  deps = [
    "//garnet/public/fidl/fuchsia.ui.viewsv1",
    "//peridot/public/fidl/fuchsia.modular",
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//topaz/public/dart/fidl",
    "//topaz/public/dart/fuchsia",
    "//topaz/public/lib/app/dart",
    "//topaz/public/lib/module_resolver/dart",
  ]
}
